Fixing blank switch buttons on small screens
This is an attempt to restyle the switch styles on a small screen.
The old styling caused the button to disappear, this brings it back
and makes it full screen width.

--- a/htdocs/public/less/dashboard.less
+++ b/htdocs/public/less/dashboard.less
@@ -10,6 +10,22 @@
   }
 }
 
+@media only screen and (max-width: 480px) {
+  .widget-small {
+    width: 100%;
+    float: none;
+    clear: both;
+    border-radius: inherit;
+    border-bottom: 1px solid @border-color;
+
+    .box-shadow(none);
+
+    &:first-child {
+      border-top: 1px solid @border-color;
+    }
+  }
+}
+
 @media only screen and (min-width: 480px) {
   .widgets {
     margin: 2.7% auto 2% auto;
